--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 header {
   background-color: #bbb;
   padding: 20px 0;
@@ -43,4 +49,25 @@ footer {
   color: #fff;
   font-size: 13px;
   margin-top: 20px 0 0;
+}
+
+@media screen and (max-width: 940px) {
+  .caixa {
+    width: auto;
+  }
+
+  h1 {
+    text-align: center;
+  }
+
+  nav {
+    position: static;
+  }
+
+  ul {
+    flex-wrap: wrap;
+    gap: 5px;
+    display: flex;
+    justify-content: center;
+  }
 }
