--- a/css/contato.css
+++ b/css/contato.css
@@ -18,7 +18,8 @@ form legend {
   display: block;
   margin-bottom: 20px;
   padding: 10px 25px;
-  width: 50%;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .checkbox {
@@ -26,7 +27,7 @@ form legend {
 }
 
 form button {
-  width: 40%;
+  width: 100%;
   padding: 15px 0;
   background-color: orange;
   color: #fff;
@@ -40,11 +41,12 @@ form button {
 
 form button:hover {
   background-color: darkorange;
-  transform: scale(1.2);
+  transform: scale(0.95);
 }
 
 table {
   margin: 20px 0 40px;
+  width: 40%;
 }
 
 thead {
@@ -58,4 +60,22 @@ th {
   border: 1px solid #000;
   padding: 8px 15px;
   vertical-align: middle;
+}
+
+select {
+  width: 100%;
+  padding: 10px;
+}
+
+@media screen and (max-width: 940px) {
+  main,
+  form {
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  form {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
