--- a/css/home.css
+++ b/css/home.css
@@ -1,47 +1,124 @@
-#banner {
+.banner {
   width: 100%;
-  object-fit: contain;
-}
-.principal {
-  background-color: #ccc;
-  padding: 30px;
-}
-
-p {
-  text-align: center;
-}
-
-#missao {
-  font-size: 20px;
-}
-
-em strong {
-  color: #ff0000;
-}
-
-.beneficios {
-  background-color: #fff;
-}
-
-.itens {
-  font-style: italic;
-}
-
-ul {
-  display: inline-block;
-  vertical-align: top;
-  width: 20%;
-  margin-right: 15%;
-}
-
-.imagembeneficios {
-  width: 50%;
 }
 
 .titulo-principal {
-  padding-left: 20px;
+  text-align: center;
+  font-size: 2em;
+  margin: 0 0 1em;
+  clear: auto;
 }
 
-.titulo-centralizado {
+.titulo-principal::first-letter {
+  text-transform: uppercase;
+}
+
+.principal {
+  padding: 3em 0;
+  background-color: #fefefe;
+  width: 940px;
+  margin: 0 auto;
+}
+
+.principal p {
+  margin: 0 0 1rem;
+}
+
+.principal strong {
+  font-weight: bold;
+}
+
+.principal em {
+  font-style: italic;
+}
+
+.mapa {
+  padding: 3em 0;
+  margin: 0 auto;
+  background: linear-gradient(#fefefe, #eee);
+}
+
+.mapa-conteudo {
+  width: 960px;
+  margin: 0 auto;
+}
+
+.mapa p {
+  margin: 0 0 2em;
   text-align: center;
+}
+
+.beneficios {
+  padding: 3em 0;
+  background-color: #eee;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.conteudo-beneficios {
+  width: 640px;
+  margin: 0 auto;
+}
+
+.lista-beneficios {
+  width: 40%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.itens {
+  line-height: 1.5em;
+}
+
+.itens::before {
+  content: '🟊';
+}
+
+.itens:first-child {
+  font-weight: bold;
+}
+
+.imagem-beneficios {
+  width: 60%;
+  display: inline-block;
+  opacity: 1;
+  transition: opacity 0.3s ease;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.imagem-beneficios:hover {
+  opacity: 0.8;
+}
+
+.utensilios {
+  float: left;
+  width: 120px;
+  margin: 0 20px 20px 0;
+}
+
+.video {
+  width: 560px;
+  margin: 1em auto;
+}
+
+@media screen and (max-width: 940px) {
+  .conteudo-beneficios,
+  .mapa-conteudo,
+  .principal,
+  .video {
+    width: auto;
+  }
+
+  .principal,
+  .mapa,
+  .beneficios {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin: 0;
+  }
+
+  .lista-beneficios,
+  .imagem-beneficios {
+    width: 100%;
+  }
 }
